<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/mainpage"
    tools:context=".androidActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="322dp"
        android:layout_height="220dp"
        android:layout_margin="35dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/androidpic" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dp">>

        <TextView
            android:id="@+id/android"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="35dp"
            android:text="Android operating system is the largest installed base among various mobile platforms across the globe. Hundreds of millions of mobile devices are powered by Android in more than 190 countries of the world. It conquered around 71% of the global market share by the end of 2021, and this trend is growing bigger every other day. The company named Open Handset Alliance developed Android for the first time that is based on the modified version of the Linux kernel and other open-source software. Google sponsored the project at initial stages and in the year 2005, it acquired the whole company. In September 2008, the first Android-powered device was launched in the market. Android dominates the mobile OS industry because of the long list of features it provides. It’s user-friendly, has huge community support, provides a greater extent of customization, and a large number of companies build Android-compatible smartphones. As a result, the market observes a sharp increase in the demand for developing Android mobile applications, and with that companies need smart developers with the right skill set. At first, the purpose of Android was thought of as a mobile operating system. However, with the advancement of code libraries and its popularity among developers of the divergent domain, Android becomes an absolute set of software for all devices like tablets, wearables, set-top boxes, smart TVs, notebooks, etc."
            android:textColor="@color/white"
            android:textSize="16sp" />




    </ScrollView>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="#ANDROID DEVELOPMENT GUIDANCE"
        android:textSize="20sp"
        android:layout_marginTop="5dp"
        android:textColor="@color/yellow"/>

    <TextView
        android:id="@+id/android1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/hyperlink13" />
    <TextView
        android:id="@+id/android2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/hyperlink14" />
    <TextView
        android:id="@+id/android3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/hyperlink15" />
    <TextView
        android:id="@+id/android4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/hyperlink16" />


</LinearLayout>